<resources>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="file_description">file_description</string>
    <string name="please_input_path">Please input Path</string>
    <string name="file_operation_options">File Operation Options</string>
    <string name="dir_operation_options">Dir Operation Options</string>
    <string name="operation">Operation :</string>
    <string name="file_not_exists">File not exists!</string>
    <string name="dir_not_exists">Dir not exists!</string>
    <string name="delete_file_success">Delete File Success</string>
    <string name="delete_file_failure">Delete File Failure</string>
    <string name="delete_dir_success">Delete Dir Success</string>
    <string name="delete_dir_failure">Delete Dir Failure</string>
    <string name="file_delete_error">File Can\'t Write, Delete Failure</string>
    <string name="dir_delete_error">Dir Can\'t Write, Delete Failure</string>
    <string name="option_rename">Rename :</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="same_file_name">Same File Name</string>
    <string name="please_input_correct_filename">Please Input Correct File Name</string>
    <string name="rename_file_success">Rename File Success</string>
    <string name="rename_file_failure">Rename File Failure</string>
    <string name="file_upload_progressdialog">文件上传进度条</string>
    <string-array name="dir_option">
        <item>Delete</item>
        <item>Rename</item>
        <item>Copy</item>
        <item>Cut</item>
    </string-array>
    <string-array name="file_option_with_upload_dir">
        <item>Delete</item>
        <item>Rename</item>
        <item>Copy</item>
        <item>Cut</item>
        <item>FileUpload</item>
    </string-array>
    <string-array name="file_option">
        <item>Delete</item>
        <item>Rename</item>
        <item>Copy</item>
        <item>Cut</item>
    </string-array>
    <string name="new_dir">New Directory</string>
    <string name="new_file">New File</string>
    <string name="create_new_file_error">Can\'t Create New File, Without Permission</string>
    <string name="paste">Paste</string>
    <string name="cannot_open_file">Can\'t find application to open this file</string>
    <string name="file">File</string>
    <string name="dir">Dir</string>
    <string name="exit_notify">Press Back again will exit!</string>
    <string name="app_name">OuterSource</string>
    <string name="image_content">image</string>
    <string name="back">返回</string>
    <string name="sure">确定</string>
    <string name="network_unreachable">当前网络不可用，请检查网络设置</string>
    <string name="settings_not_exists">系统错误，程序设置不存在</string>
    <string name="setting_ok">确定</string>
    <string name="capital_on">ON</string>
    <string name="capital_off">OFF</string>
    <string name="switch_on">ON</string>
    <string name="switch_off">OFF</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_nomore">无更多数据</string>
    <string name="lmlistview_header_hint_normal">下拉加载上一页</string>
    <string name="lmlistview_header_hint_ready">松开加载上一页</string>
    <string name="lmlistview_header_hint_loading">正在加载上一页</string>
    <string name="lmlistview_header_hint_first">当前已是第一页</string>
    <string name="lmlistview_footer_hint_normal">查看下一页</string>
    <string name="lmlistview_footer_hint_ready">松开载入下一页</string>
    <string name="lmlistview_footer_hint_nomore">无更多数据</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="scan_cancel">Cancel</string>
    <string name="crop_save">Save</string>
    <string name="crop_cancel">Cancel</string>
    <string name="image_upload">图片上传</string>
    <string-array name="image_upload_method">
        <item>从相册中挑选</item>
        <item>用相机拍摄</item>
    </string-array>
    <string name="login_user_hint">用户名</string>
    <string name="login_user_password">密码</string>
    <string name="login_save_account">记住密码</string>
    <string name="login_register">注册新账户</string>
    <string name="login_button">登录</string>
    <string name="login_exit">退出</string>
    <string name="login_title">欢迎来到OTS</string>
    <string name="login_input_username">请输入用户名</string>
    <string name="login_input_userpassword">请输入密码</string>
    <string name="login_notify">提示</string>
    <string name="login_falure">身份验证失败</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="unlock_account">解锁帐号</string>
    <string name="unlock_account_success">解锁帐号成功</string>
    <string name="unlock_account_failure">解锁帐号失败</string>
    <string name="register_title">注册OTS</string>
    <string name="register_done">完成注册</string>
    <string name="register_next">完善资料</string>
    <string name="register_notify">请填写注册信息</string>
    <string name="register_name_length">用户名长度不在6&#8211;12个字符之间</string>
    <string name="register_name_available">当前用户名可用</string>
    <string name="register_name_unavailable">当前用户名已被注册过了</string>
    <string name="register_name_There_are">用户名存在</string>
    <string name="register_name_unThere_are">用户名不存在</string>
    <string name="register_email_available">邮箱可用</string>
    <string name="register_email_unavailable">邮箱已被注册过</string>
    <string name="register_email_not">这不是一个邮箱,请换一个邮箱</string>
    <string name="register_repeat_password">重复密码</string>
    <string name="register_email_hint">输入邮箱</string>
    <string name="register_passowrd_length">密码长度不在6&#8211;12个字符之间</string>
    <string name="register_password_notsame">两次密码不一样</string>
    <string name="register_success">注册成功!</string>
    <string name="register_check_failure">信息不完整,请填写完整的注册信息</string>
    <string name="register_failure">注册失败</string>
    <string name="register_step_two_notify">请填写个人信息</string>
    <string name="register_gender">性        别:</string>
    <string name="man">男性</string>
    <string name="women">女性</string>
    <string name="register_birthday">出生日期:</string>
    <string name="choice_birthday">选择出生日期:</string>
    <string name="register_address">现居住地:</string>
    <string name="register_phone">联系电话:</string>
    <string name="previous">上一步</string>
    <string name="next">下一步</string>
    <string name="address_edit">请输入地址信息:</string>
    <string name="phone_edit">请输入联系电话:</string>
    <string name="change_user_info_success">用户资料已保存</string>
    <string name="Is_the_latest_version">已是最新版本</string>
    <string name="change_user_info_failure">用户资料保存失败</string>
    <string name="register_step_four_notify">请上传头像信息</string>
    <string name="register_image">头像图片</string>
    <string name="register_choice_image">选择图片</string>
    <string name="register_upload_image">上传图片</string>
    <string name="register_upload_header_success">头像已保存</string>
    <string name="register_upload_header_faliure">上传头像失败</string>
    <string name="register_nochoose_icon">您还未选择图片，请点击头像选择图片</string>
    <string name="choose_address_title">请选择地址</string>
    <string name="choose_province">请选择省份</string>
    <string name="choose_city">请选择城市</string>
    <string name="choose_county">请选择区县</string>
    <string name="choose_town">请选择乡镇</string>
    <string name="register_three_notify">请填写密保问题</string>
    <string name="register_question1">密保问题1</string>
    <string name="register_question2">密保问题2</string>
    <string name="register_question3">密保问题3</string>
    <string name="register_answer1">密保答案1</string>
    <string name="register_answer2">密保答案2</string>
    <string name="register_answer3">密保答案3</string>
    <string name="register_secret_done">完成</string>
    <string name="register_question1_notify">请选择密保问题1</string>
    <string name="register_question2_notify">请选择密保问题2</string>
    <string name="register_question3_notify">请选择密保问题3</string>
    <string name="register_answer1_notify">密保答案1不能为空，长度需在6&#8211;12个字符之间</string>
    <string name="register_answer2_notify">密保答案2不能为空，长度需在6&#8211;12个字符之间</string>
    <string name="register_answer3_notify">密保答案3不能为空，长度需在6&#8211;12个字符之间</string>
    <string name="register_change_secret_failure">更改用户密保失败</string>
    <string name="register_change_secret_success">密保已成功保存</string>
    <string name="ps_find_password">用户密码找回</string>
    <string name="setting_new_password">设置新密码</string>
    <string name="user_name">用   户   名</string>
    <string name="find_password_back">返    回</string>
    <string name="find_password_next">下一步</string>
    <string name="find_password_by_username">找回密码</string>
    <string name="login_input_new_password">请输入新密码</string>
    <string name="modify_headimage">修改头像</string>
    <string name="my_task">我的任务</string>
    <string name="my_order">我的订单</string>
    <string name="my_account">我的账户</string>
    <string name="modify_information">修改资料</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_question">修改密保问题</string>
    <string name="email_verify">邮箱验证</string>
    <string name="feedback_about">意见反馈</string>
    <string name="about">关于OTS</string>
    <string name="recommend">推荐</string>
    <string name="exit">退出应用</string>
    <string name="unsubscribe">注销账户</string>
    <string name="user_home">个人信息</string>
    <string name="password">旧   密   码</string>
    <string name="new_password">新   密   码</string>
    <string name="repeat_new_password">重复新密码</string>
    <string name="please_input_password">请输入旧密码:</string>
    <string name="input_new_password">请输入新密码:</string>
    <string name="unsubscribe_success">注销成功,应用将退出</string>
    <string name="gain_succeed">获取成功</string>
    <string name="unsubscribe_failure">注销失败</string>
    <string name="repeat_password">重复密码</string>
    <string name="input_repeat_password">请输入重复新密码:</string>
    <string name="complete_modify">完成修改</string>
    <string name="old_password_error">旧密码错误</string>
    <string name="new_password_not">新密码长度不在6&#8211;12个字符之间</string>
    <string name="repeat_new_password_notsame">重复新密码不一样</string>
    <string name="user_password">密          码</string>
    <string name="ot_homepage">我的任务</string>
    <string name="ot_homepage_gogo">我的项目</string>
    <string name="ot_homepage_call_for_expertise">发布需求</string>
    <string name="ot_homepage_my_skill">我的技能</string>
    <string name="user_skill_title_name">名称</string>
    <string name="user_skill_title_addtime">添加时间</string>
    <string name="user_skill_title_examtime">考试时间</string>
    <string name="user_skill_title_score">分数</string>
    <string name="user_project_publish">用户发布项目</string>
    <string name="category_id">项目类别:</string>
    <string name="choice_category_id">选择项目类别</string>
    <string name="pro_name">项目名称:</string>
    <string name="input_pro_name">输入项目名称</string>
    <string name="pro_price">项目价格:</string>
    <string name="input_pro_price">输入项目价格</string>
    <string name="pro_desc">项目描述:</string>
    <string name="inputpro_desc">输入项目的详细功能描述</string>
    <string name="pro_start_time">项目开始时间</string>
    <string name="from_to">到</string>
    <string name="pro_end_time">项目结束时间</string>
    <string name="publish_project">发布项目</string>
    <string name="start_time">开始时间:</string>
    <string name="end_time">结束时间:</string>
    <string name="price_unit">元</string>
    <string name="apply_model">ApplyUserID:</string>
    <string name="progress_unit">%</string>
	<string name="pro_model_start">2015-01-10</string>
	<string name="pro_model_end">2015-01-10</string>
	<string name="pro_model_fee">256455</string>
	<string name="progress">10</string>
	<string name="ot_progress">项目模块完成进度</string>
    <string name="apply_content">警告:你确定要承接这个项目模块吗?请注意!如果你不能在规定的时间完成项目,你将会受到违约处理.</string>
</resources>