<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="5dip"
    android:paddingTop="5dip" >

    <TextView
        android:id="@+id/skill_item_name"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/user_skill_title_name" />

    <TextView
        android:id="@+id/skill_item_addtime"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/user_skill_title_addtime" />

    <TextView
        android:id="@+id/skill_item_exam_time"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/user_skill_title_examtime" />

    <TextView
        android:id="@+id/skill_item_score"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/user_skill_title_score" />

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/skill_item_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ot_email_no_verified"
            android:contentDescription="@string/image_content"
            android:layout_gravity="center"
            android:singleLine="true" />
    </LinearLayout>

</LinearLayout>