<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom"
    android:layout_width="match_parent"
    android:layout_height="42dip"
    android:background="@color/common_blue"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/ot_bottom_0"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ot_bottom_selector"
        android:gravity="center"
        android:text="@string/ot_homepage"
        android:textColor="@color/ot_bottom_text_color" />

    <TextView
        android:id="@+id/ot_bottom_1"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ot_bottom_selector"
        android:gravity="center"
        android:text="@string/ot_homepage_gogo"
        android:textColor="@color/ot_bottom_text_color" />

    <TextView
        android:id="@+id/ot_bottom_2"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ot_bottom_selector"
        android:gravity="center"
        android:text="@string/ot_homepage_call_for_expertise"
        android:textColor="@color/ot_bottom_text_color" />

    <TextView
        android:id="@+id/ot_bottom_3"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ot_bottom_selector"
        android:gravity="center"
        android:text="@string/ot_homepage_my_skill"
        android:textColor="@color/ot_bottom_text_color" />

</LinearLayout>